Actualización de Departamento

--- a/full/form_checkboxes_radios.html
+++ b/full/form_checkboxes_radios.html
@@ -489,8 +489,9 @@
 								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Listar</a></li>
 								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link active">Agregar</a></li>
 								<li class="nav-item"><a href="form_select2.html" class="nav-link">Editar</a></li>
+								
+								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Departamento</a></li>
 								<!--
-								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Bootstrap multiselect</a></li>
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
 								<li class="nav-item"><a href="form_controls_extended.html" class="nav-link">Extended controls</a></li>
 								<li class="nav-item"><a href="form_floating_labels.html" class="nav-link">Floating labels</a></li>
@@ -1277,7 +1278,7 @@
 								<!-- Form inputs -->
 				<div class="card">
 					<div class="card-header header-elements-inline">
-						<h5 class="card-title">Basic form inputs</h5>
+						<h5 class="card-title">Empleados</h5>
 						<div class="header-elements">
 							<div class="list-icons">
 		                		<a class="list-icons-item" data-action="collapse"></a>
@@ -1292,31 +1293,31 @@
 
 						<form action="#">
 							<fieldset class="mb-3">
-								<legend class="text-uppercase font-size-sm font-weight-bold">Basic inputs</legend>
+								<legend class="text-uppercase font-size-sm font-weight-bold">Introducir Datos Basicos</legend>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Default text input</label>
+									<label class="col-form-label col-lg-2">Username</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Password</label>
+									<label class="col-form-label col-lg-2">Contraseña</label>
 									<div class="col-lg-10">
 										<input type="password" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Input with placeholder</label>
+									<label class="col-form-label col-lg-2">Cuenta</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control" placeholder="Enter your username...">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Read only field</label>
+									<label class="col-form-label col-lg-2">Objetivo</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control" readonly value="read only">
 									</div>
@@ -1330,7 +1331,7 @@
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Predefined value</label>
+									<label class="col-form-label col-lg-2">Dirección Web</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control" value="http://">
 									</div>
@@ -1344,7 +1345,7 @@
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Maximum value</label>
+									<label class="col-form-label col-lg-2">Numero Cuenta</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control" maxlength="4" placeholder="Maximum 4 characters">
 									</div>
@@ -1365,7 +1366,7 @@
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Textarea</label>
+									<label class="col-form-label col-lg-2">Descripción</label>
 									<div class="col-lg-10">
 										<textarea rows="3" cols="3" class="form-control" placeholder="Default textarea"></textarea>
 									</div>
