--- a/full/form_select2.html
+++ b/full/form_select2.html
@@ -488,8 +488,9 @@
 								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Listar</a></li>
 								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">Agregar</a></li>
 								<li class="nav-item"><a href="form_select2.html" class="nav-link active">Editar</a></li>
+								
+								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Departamento</a></li>
 								<!--
-								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Bootstrap multiselect</a></li>
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
 								<li class="nav-item"><a href="form_controls_extended.html" class="nav-link">Extended controls</a></li>
 								<li class="nav-item"><a href="form_floating_labels.html" class="nav-link">Floating labels</a></li>
