--- a/full/form_multiselect.html
+++ b/full/form_multiselect.html
@@ -382,9 +382,9 @@
 							</div>
 
 							<div class="media-body">
-								<div class="media-title font-weight-semibold">Victoria Baker</div>
+								<div class="media-title font-weight-semibold">Ezer Banda</div>
 								<div class="font-size-xs opacity-50">
-									<i class="icon-pin font-size-sm"></i> &nbsp;Santa Ana, CA
+									<i class="icon-pin font-size-sm"></i> &nbsp;Cd Victoria, Tamps
 								</div>
 							</div>
 
@@ -412,6 +412,7 @@
 								</span>
 							</a>
 						</li>
+						<!--
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-copy"></i> <span>Layouts</span></a>
 
@@ -477,7 +478,7 @@
 								<span class="badge bg-blue-400 align-self-center ml-auto">2.2</span>
 							</a>
 						</li>
-						<li class="nav-item"><a href="../../../RTL/default/full/index.html" class="nav-link"><i class="icon-width"></i> <span>RTL version</span></a></li>
+						<li class="nav-item"><a href="../../../RTL/default/full/index.html" class="nav-link"><i class="icon-width"></i> <span>RTL version</span></a></li>/-->
 						<!-- /main -->
 
 						<!-- Forms -->
@@ -485,10 +486,11 @@
 						<li class="nav-item nav-item-submenu nav-item-expanded nav-item-open">
 							<a href="#" class="nav-link"><i class="icon-pencil3"></i> <span>Form components</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="Form components">
-								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Basic inputs</a></li>
-								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">Checkboxes &amp; radios</a></li>
-								<li class="nav-item"><a href="form_select2.html" class="nav-link">Select2 selects</a></li>
-								<li class="nav-item"><a href="form_multiselect.html" class="nav-link active">Bootstrap multiselect</a></li>
+								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Listar</a></li>
+								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">Agregar</a></li>
+								<li class="nav-item"><a href="form_select2.html" class="nav-link">Editar</a></li>
+								<li class="nav-item"><a href="form_multiselect.html" class="nav-link active">Departamento</a></li>
+								<!--
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
 								<li class="nav-item"><a href="form_controls_extended.html" class="nav-link">Extended controls</a></li>
 								<li class="nav-item"><a href="form_floating_labels.html" class="nav-link">Floating labels</a></li>
@@ -497,9 +499,10 @@
 								<li class="nav-item"><a href="form_validation.html" class="nav-link">Validation</a></li>
 								<li class="nav-item"><a href="form_wizard.html" class="nav-link">Form wizard</a></li>
 								<li class="nav-item"><a href="form_actions.html" class="nav-link">Form actions</a></li>
-								<li class="nav-item"><a href="form_inputs_grid.html" class="nav-link">Inputs grid</a></li>
+								<li class="nav-item"><a href="form_inputs_grid.html" class="nav-link">Inputs grid</a></li>/-->
 							</ul>
 						</li>
+						<!--
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-file-css"></i> <span>JSON forms</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="JSON forms">
@@ -534,10 +537,11 @@
 								<li class="nav-item"><a href="form_layout_horizontal.html" class="nav-link">Horizontal form</a></li>
 								<li class="nav-item"><a href="form_layout_horizontal_styled.html" class="nav-link disabled">Custom styles <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /forms -->
 
 						<!-- Components -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Components</div> <i class="icon-menu" title="Components"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-grid"></i> <span>Basic components</span></a>
@@ -639,10 +643,11 @@
 								<li class="nav-item"><a href="icons_material.html" class="nav-link">Material</a></li>
 								<li class="nav-item"><a href="icons_fontawesome.html" class="nav-link">Font awesome</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /components -->
 
 						<!-- Layout -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Layout</div> <i class="icon-menu" title="Layout options"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-stack2"></i> <span>Page layouts</span></a>
@@ -804,10 +809,11 @@
 								</li>
 								<li class="nav-item"><a href="#" class="nav-link"><i class="icon-chrome"></i> Second level</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /layout -->
 
 						<!-- Data visualization -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Data visualization</div> <i class="icon-menu" title="Data visualization"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-graph"></i> <span>Echarts library</span></a>
@@ -908,10 +914,11 @@
 								<li class="nav-item"><a href="maps_vector.html" class="nav-link">Vector maps</a></li>
 								<li class="nav-item"><a href="maps_echarts.html" class="nav-link disabled">ECharts maps <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /data visualization -->
 
 						<!-- Extensions -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Extensions</div> <i class="icon-menu" title="Extensions"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-puzzle4"></i> <span>Extensions</span></a>
@@ -956,10 +963,11 @@
 								<li class="nav-item"><a href="internationalization_fallback.html" class="nav-link">Language fallback</a></li>
 								<li class="nav-item"><a href="internationalization_callbacks.html" class="nav-link">Callbacks</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /extensions -->
 
 						<!-- Tables -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Tables</div> <i class="icon-menu" title="Tables"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-table2"></i> <span>Basic tables</span></a>
@@ -1025,10 +1033,11 @@
 								<li class="nav-item"><a href="table_responsive.html" class="nav-link">Responsive basic tables</a></li>
 								<li class="nav-item"><a href="datatable_responsive.html" class="nav-link">Responsive data tables</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /tables -->
 
 						<!-- Page kits -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Page kits</div> <i class="icon-menu" title="Page kits"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-grid6"></i> <span>General pages</span></a>
@@ -1189,7 +1198,7 @@
 								<li class="nav-item"><a href="widgets_menu.html" class="nav-link disabled">Menu widgets <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 								<li class="nav-item"><a href="widgets_form.html" class="nav-link disabled">Form widgets <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /page kits -->
 
 					</ul>
@@ -1210,7 +1219,7 @@
 			<div class="page-header page-header-light">
 				<div class="page-header-content header-elements-md-inline">
 					<div class="page-title d-flex">
-						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Forms</span> - Multiselect</h4>
+						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Departamento</span> - Empleados</h4>
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
 					</div>
 
@@ -1228,7 +1237,7 @@
 						<div class="breadcrumb">
 							<a href="index.html" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Home</a>
 							<a href="form_multiselect.html" class="breadcrumb-item">Forms</a>
-							<span class="breadcrumb-item active">Multiselect</span>
+							<span class="breadcrumb-item active">Departamento</span>
 						</div>
 
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
@@ -1266,6 +1275,7 @@
 			<div class="content">
 			
 				<!-- Multiselect examples -->
+				<!--
 				<div class="mb-3">
 					<h6 class="mb-0 font-weight-semibold">
 						Basic examples
@@ -1288,8 +1298,9 @@
 							</div>
 
 							<div class="card-body">
-
+								/-->
 								<!-- Default multiselect -->
+								<!--
 								<div class="form-group">
 									<label>Default select</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1298,11 +1309,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /default multiselect -->
 
 
 								<!-- Default multiselect with selected options -->
+								<!--
 								<div class="form-group">
 									<label>Default selected options</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1311,11 +1323,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms" selected>Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /default multiselect with selected options -->
 
 
 								<!-- Options with divider -->
+								<!--
 								<div class="form-group">
 									<label>Options with divider</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1325,11 +1338,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /options with divider -->
 
 
 								<!-- Option groups support -->
+								<!--
 								<div class="form-group">
 									<label>Option groups support</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1344,11 +1358,12 @@
 											<option value="software">Software Engineering</option>
 										</optgroup>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /option groups support -->
 
 
 								<!-- Options with and without groups -->
+								<!--
 								<div class="form-group">
 									<label>Options with and without groups</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1365,11 +1380,12 @@
 											<option value="software">Software Engineering</option>
 										</optgroup>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /options with and without groups -->
 
 
 								<!-- Dropdown with max height -->
+								<!--
 								<div class="form-group">
 									<label>Dropdown with max height</label>
 									<select class="form-control multiselect-max-height" multiple="multiple" data-fouc>
@@ -1384,11 +1400,12 @@
 											<option value="software">Software Engineering</option>
 										</optgroup>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /dropdown with max height -->
 
 
 								<!-- Select All option -->
+								<!--
 								<div class="form-group">
 									<label>With <span class="font-weight-semibold">Select all</span> option</label>
 									<select class="form-control multiselect-select-all" multiple="multiple" data-fouc>
@@ -1397,11 +1414,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /select All option -->
 
 
 								<!-- Select All option selected -->
+								<!--
 								<div class="form-group">
 									<label>Select all option response</label>
 									<select class="form-control multiselect-select-all" multiple="multiple" data-fouc>
@@ -1410,11 +1428,12 @@
 										<option value="mozarella" selected>Mozzarella</option>
 										<option value="mushrooms" selected>Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /select All option selected -->
 
 
 								<!-- Filtering options -->
+								<!--
 								<div class="form-group">
 									<label><span class="font-weight-semibold">Filtering</span> option</label>
 									<select class="form-control multiselect-filtering" multiple="multiple" data-fouc>
@@ -1423,11 +1442,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /filtering options -->
 
 
 								<!-- Select All and filtering options -->
+								<!--
 								<div class="form-group">
 									<label><span class="font-weight-semibold">Select All</span> and <span class="font-weight-semibold">Filtering</span> options</label>
 									<select class="form-control multiselect-select-all-filtering" multiple="multiple" data-fouc>
@@ -1436,12 +1456,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /select All and filtering options -->
 
 
 								<!-- Optgroups, filtering and select all -->
-								<div class="form-group">
+<!--								<div class="form-group">
 									<label>Full featured example</label>
 									<select class="form-control multiselect-full-featured" multiple="multiple" data-fouc>
 										<option value="lab">Lab Course</option>
@@ -1457,11 +1477,12 @@
 											<option value="software">Software Engineering</option>
 										</optgroup>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /optgroups, filtering and select all -->
 
 
 								<!-- Disabled select -->
+								<!--
 								<div class="form-group">
 									<label>Disabled select</label>
 									<select class="form-control multiselect" multiple="multiple" disabled data-fouc>
@@ -1470,11 +1491,12 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /disabled select -->
 
 
 								<!-- Disabled options -->
+								<!--
 								<div class="form-group">
 									<label>Disabled options</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1483,11 +1505,12 @@
 										<option value="mozarella" disabled>Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /disabled options -->
 
 
 								<!-- Disabled optgroups -->
+								<!--
 								<div class="form-group">
 									<label>Disabled optgroups</label>
 									<select class="form-control multiselect" multiple="multiple" data-fouc>
@@ -1502,11 +1525,12 @@
 											<option value="software">Software Engineering</option>
 										</optgroup>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /disabled optgroups -->
 
 
 								<!-- Prevent deselect -->
+								<!--
 								<div class="form-group">
 									<label>Prevent deselect</label>
 									<select class="form-control multiselect-prevent-deselect" multiple="multiple" data-fouc>
@@ -1515,13 +1539,13 @@
 										<option value="mozarella">Mozzarella</option>
 										<option value="mushrooms">Mushrooms</option>
 									</select>
-								</div>
+								</div>/-->
 								<!-- /prevent deselect -->
 
 							</div>
 						</div>
 					</div>
-
+<!--
 					<div class="col-md-6">
 						<div class="card">
 							<div class="card-header header-elements-inline">
@@ -1536,8 +1560,9 @@
 							</div>
 
 							<div class="card-body">
-
+/-->
 								<!-- Within a group with addon -->
+								<!--
 								<div class="form-group">
 									<label>Within a group with addon</label>
 									<div class="input-group">
@@ -1554,11 +1579,12 @@
 											<option value="mushrooms">Mushrooms</option>
 										</select>
 									</div>									
-								</div>
+								</div>/-->
 								<!-- /within a group with addon -->
 
 
 								<!-- Within a group with button -->
+								<!--
 								<div class="form-group">
 									<label>Within a group with button</label>
 									<div class="input-group">
@@ -1572,11 +1598,12 @@
 											<option value="mushrooms">Mushrooms</option>
 										</select>
 									</div>									
-								</div>
+								</div>/-->
 								<!-- /within a group with button -->
 
 
 								<!-- Within a group with button dropdown -->
+								<!--
 								<div class="form-group">
 									<label>Within a group with button dropdown</label>
 									<div class="input-group">
@@ -1598,11 +1625,12 @@
 											<option value="mushrooms">Mushrooms</option>
 										</select>
 									</div>									
-								</div>
+								</div>/-->
 								<!-- /within a group with button dropdown -->
 
 
 								<!-- Within a group with segmented button dropdown -->
+								<!--
 								<div class="form-group">
 									<label>Within a group with segmented button dropdown</label>
 									<div class="input-group">
@@ -1625,11 +1653,12 @@
 											<option value="mushrooms">Mushrooms</option>
 										</select>
 									</div>									
-								</div>
+								</div>/-->
 								<!-- /within a group with segmented button dropdown -->
 
 
 								<!-- Within a group with checkbox -->
+								<!--
 								<div class="form-group">
 									<label>Within a group with checkbox</label>
 									<div class="input-group">
@@ -1646,11 +1675,12 @@
 											<option value="mushrooms">Mushrooms</option>
 										</select>
 									</div>									
-								</div>
+								</div>/-->
 								<!-- /within a group with checkbox -->
 
 
 								<!-- Within a group with radio -->
+								<!--
 								<div class="form-group">
 									<label>Within a group with radio</label>
 									<div class="input-group">
@@ -1667,7 +1697,7 @@
 											<option value="mushrooms">Mushrooms</option>
 										</select>
 									</div>									
-								</div>
+								</div>/-->
 								<!-- /within a group with radio -->
 
 
