--- a/full/form_select2.html
+++ b/full/form_select2.html
@@ -481,22 +481,24 @@
 						<!-- /main -->
 
 						<!-- Forms -->
-						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Forms</div> <i class="icon-menu" title="Forms"></i></li>
+						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Tables</div> <i class="icon-menu" title="Forms"></i></li>
 						<li class="nav-item nav-item-submenu nav-item-expanded nav-item-open">
-							<a href="#" class="nav-link"><i class="icon-pencil3"></i> <span>Form components</span></a>
+							<a href="#" class="nav-link"><i class="icon-pencil3"></i> <span>Empleados</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="Form components">
 								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Listar</a></li>
 								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">Agregar</a></li>
 								<li class="nav-item"><a href="form_select2.html" class="nav-link active">Editar</a></li>
-								
-								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Departamento</a></li>
 								<!--
+								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Departamento</a></li>
+								
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
 								<li class="nav-item"><a href="form_controls_extended.html" class="nav-link">Extended controls</a></li>
 								<li class="nav-item"><a href="form_floating_labels.html" class="nav-link">Floating labels</a></li>
 								<li class="nav-item"><a href="form_tag_inputs.html" class="nav-link">Tag inputs</a></li>
 								<li class="nav-item"><a href="form_dual_listboxes.html" class="nav-link">Dual Listboxes</a></li>
-								<li class="nav-item"><a href="form_validation.html" class="nav-link">Validation</a></li>
+								/-->
+								<li class="nav-item"><a href="form_validation.html" class="nav-link">Departamento</a></li>
+								<!--
 								<li class="nav-item"><a href="form_wizard.html" class="nav-link">Form wizard</a></li>
 								<li class="nav-item"><a href="form_actions.html" class="nav-link">Form actions</a></li>
 								<li class="nav-item"><a href="form_inputs_grid.html" class="nav-link">Inputs grid</a></li>/-->
@@ -1298,9 +1300,9 @@
 
 							<div class="card-body">
 								<div class="form-group">
-									<label>Empleado</label>
-									<select class="form-control select" data-fouc>
-										<optgroup label="Mountain Time Zone">
+									<label>Buscar Empleado</label>
+									<select class="form-control select-search" data-fouc>
+										<optgroup label="¿A quien Buscas?">
 											<option value="AZ">Ezer</option>
 											<option value="CO">Karen</option>
 											<option value="ID">Adair</option>
@@ -1318,39 +1320,27 @@
 								<div class="form-group">
 									<label class="d-block">Clave</label>
 									<select class="form-control select-fixed-single" data-fouc>
-										<optgroup label="Mountain Time Zone">
+										<optgroup label="Matricula">
 											<option value="AZ">1930230</option>
 											<option value="CO">1920243</option>
 											<option value="ID">1932893</option>
 											<option value="WY">1934234</option>
 										</optgroup>
-										<optgroup label="Central Time Zone">
-											<option value="AL">Alabama</option>
-											<option value="AR">Arkansas</option>
-											<option value="KS">Kansas</option>
-											<option value="KY">Kentucky</option>
-										</optgroup>
 									</select>
 								</div>
 
 								<div class="form-group">
-									<label>Select with search</label>
+									<label>Ciudad</label>
 									<select class="form-control select-search" data-fouc>
-										<optgroup label="Mountain Time Zone">
-											<option value="AZ">Arizona</option>
-											<option value="CO">Colorado</option>
-											<option value="ID">Idaho</option>
-											<option value="WY">Wyoming</option>
-										</optgroup>
-										<optgroup label="Central Time Zone">
-											<option value="AL">Alabama</option>
-											<option value="IA">Iowa</option>
-											<option value="KS">Kansas</option>
-											<option value="KY">Kentucky</option>
+										<optgroup>
+											<option value="AZ">Cd. victoria</option>
+											<option value="CO">Cd. Mante</option>
+											<option value="ID">Tula</option>
+											<option value="WY">Tampico</option>
 										</optgroup>
 									</select>
 								</div>
-
+								<!--
 								<div class="form-group">
 									<label>Select with placeholder</label>
 									<select data-placeholder="Select a State..." class="form-control select" data-fouc>
@@ -1710,7 +1700,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /select2 selects -->
 
 
