--- a/full/alpaca_basic.html
+++ b/full/alpaca_basic.html
@@ -385,9 +385,9 @@
 							</div>
 
 							<div class="media-body">
-								<div class="media-title font-weight-semibold">Victoria Baker</div>
+								<div class="media-title font-weight-semibold">Ezer Banda</div>
 								<div class="font-size-xs opacity-50">
-									<i class="icon-pin font-size-sm"></i> &nbsp;Santa Ana, CA
+									<i class="icon-pin font-size-sm"></i> &nbsp;Cd. Victoria, Tamps
 								</div>
 							</div>
 
@@ -415,6 +415,7 @@
 								</span>
 							</a>
 						</li>
+						<!--
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-copy"></i> <span>Layouts</span></a>
 
@@ -480,43 +481,47 @@
 								<span class="badge bg-blue-400 align-self-center ml-auto">2.2</span>
 							</a>
 						</li>
-						<li class="nav-item"><a href="../../../RTL/default/full/index.html" class="nav-link"><i class="icon-width"></i> <span>RTL version</span></a></li>
+						<li class="nav-item"><a href="../../../RTL/default/full/index.html" class="nav-link"><i class="icon-width"></i> <span>RTL version</span></a></li>/-->
 						<!-- /main -->
 
 						<!-- Forms -->
-						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Forms</div> <i class="icon-menu" title="Forms"></i></li>
+						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Tablas</div> <i class="icon-menu" title="Forms"></i></li>
 						<li class="nav-item nav-item-submenu">
-							<a href="#" class="nav-link"><i class="icon-pencil3"></i> <span>Form components</span></a>
+							<a href="#" class="nav-link"><i class="icon-pencil3"></i> <span>Empleados</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="Form components">
-								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Basic inputs</a></li>
-								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">Checkboxes &amp; radios</a></li>
-								<li class="nav-item"><a href="form_select2.html" class="nav-link">Select2 selects</a></li>
+								<li class="nav-item"><a href="form_inputs.html" class="nav-link">Listar</a></li>
+								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">Agregar</a></li>
+								<li class="nav-item"><a href="form_select2.html" class="nav-link">Editar</a></li>
+								<!--
 								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Bootstrap multiselect</a></li>
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
 								<li class="nav-item"><a href="form_controls_extended.html" class="nav-link">Extended controls</a></li>
 								<li class="nav-item"><a href="form_floating_labels.html" class="nav-link">Floating labels</a></li>
 								<li class="nav-item"><a href="form_tag_inputs.html" class="nav-link">Tag inputs</a></li>
 								<li class="nav-item"><a href="form_dual_listboxes.html" class="nav-link">Dual Listboxes</a></li>
-								<li class="nav-item"><a href="form_validation.html" class="nav-link">Validation</a></li>
+								/-->
+								<li class="nav-item"><a href="form_validation.html" class="nav-link">Departamento</a></li>
+								<!--
 								<li class="nav-item"><a href="form_wizard.html" class="nav-link">Form wizard</a></li>
 								<li class="nav-item"><a href="form_actions.html" class="nav-link">Form actions</a></li>
-								<li class="nav-item"><a href="form_inputs_grid.html" class="nav-link">Inputs grid</a></li>
+								<li class="nav-item"><a href="form_inputs_grid.html" class="nav-link">Inputs grid</a></li>/-->
 							</ul>
 						</li>
 						<li class="nav-item nav-item-submenu nav-item-expanded nav-item-open">
-							<a href="#" class="nav-link"><i class="icon-file-css"></i> <span>JSON forms</span></a>
+							<a href="#" class="nav-link"><i class="icon-file-css"></i> <span>Empresas</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="JSON forms">
-								<li class="nav-item"><a href="alpaca_basic.html" class="nav-link active">Basic inputs</a></li>
-								<li class="nav-item"><a href="alpaca_advanced.html" class="nav-link">Advanced inputs</a></li>
-								<li class="nav-item"><a href="alpaca_controls.html" class="nav-link">Controls</a></li>
+								<li class="nav-item"><a href="alpaca_basic.html" class="nav-link active">Listar</a></li>
+								<li class="nav-item"><a href="alpaca_advanced.html" class="nav-link">Agregar</a></li>
+								<li class="nav-item"><a href="alpaca_controls.html" class="nav-link">Editar</a></li>
 							</ul>
 						</li>
 						<li class="nav-item nav-item-submenu">
-							<a href="#" class="nav-link"><i class="icon-spell-check"></i> <span>Text editors</span></a>
+							<a href="#" class="nav-link"><i class="icon-spell-check"></i> <span>Vacaciones</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="Text editors">
-								<li class="nav-item"><a href="editor_summernote.html" class="nav-link">Summernote editor</a></li>
-								<li class="nav-item"><a href="editor_ckeditor.html" class="nav-link">CKEditor</a></li>
-								<li class="nav-item"><a href="editor_trumbowyg.html" class="nav-link">Trumbowyg editor</a></li>
+								<li class="nav-item"><a href="editor_summernote.html" class="nav-link">Listar</a></li>
+								<li class="nav-item"><a href="editor_ckeditor.html" class="nav-link">Agregar</a></li>
+								<li class="nav-item"><a href="editor_trumbowyg.html" class="nav-link">Editar</a></li>
+								<!--
 								<li class="nav-item"><a href="editor_code.html" class="nav-link">Code editor</a></li>
 							</ul>
 						</li>
@@ -537,10 +542,11 @@
 								<li class="nav-item"><a href="form_layout_horizontal.html" class="nav-link">Horizontal form</a></li>
 								<li class="nav-item"><a href="form_layout_horizontal_styled.html" class="nav-link disabled">Custom styles <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /forms -->
 
 						<!-- Components -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Components</div> <i class="icon-menu" title="Components"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-grid"></i> <span>Basic components</span></a>
@@ -642,10 +648,11 @@
 								<li class="nav-item"><a href="icons_material.html" class="nav-link">Material</a></li>
 								<li class="nav-item"><a href="icons_fontawesome.html" class="nav-link">Font awesome</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /components -->
 
 						<!-- Layout -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Layout</div> <i class="icon-menu" title="Layout options"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-stack2"></i> <span>Page layouts</span></a>
@@ -807,10 +814,11 @@
 								</li>
 								<li class="nav-item"><a href="#" class="nav-link"><i class="icon-chrome"></i> Second level</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /layout -->
 
 						<!-- Data visualization -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Data visualization</div> <i class="icon-menu" title="Data visualization"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-graph"></i> <span>Echarts library</span></a>
@@ -911,10 +919,11 @@
 								<li class="nav-item"><a href="maps_vector.html" class="nav-link">Vector maps</a></li>
 								<li class="nav-item"><a href="maps_echarts.html" class="nav-link disabled">ECharts maps <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /data visualization -->
 
 						<!-- Extensions -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Extensions</div> <i class="icon-menu" title="Extensions"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-puzzle4"></i> <span>Extensions</span></a>
@@ -959,10 +968,11 @@
 								<li class="nav-item"><a href="internationalization_fallback.html" class="nav-link">Language fallback</a></li>
 								<li class="nav-item"><a href="internationalization_callbacks.html" class="nav-link">Callbacks</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /extensions -->
 
 						<!-- Tables -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Tables</div> <i class="icon-menu" title="Tables"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-table2"></i> <span>Basic tables</span></a>
@@ -1028,10 +1038,11 @@
 								<li class="nav-item"><a href="table_responsive.html" class="nav-link">Responsive basic tables</a></li>
 								<li class="nav-item"><a href="datatable_responsive.html" class="nav-link">Responsive data tables</a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /tables -->
 
 						<!-- Page kits -->
+						<!--
 						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Page kits</div> <i class="icon-menu" title="Page kits"></i></li>
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-grid6"></i> <span>General pages</span></a>
@@ -1192,7 +1203,7 @@
 								<li class="nav-item"><a href="widgets_menu.html" class="nav-link disabled">Menu widgets <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 								<li class="nav-item"><a href="widgets_form.html" class="nav-link disabled">Form widgets <span class="badge bg-transparent align-self-center ml-auto">Coming soon</span></a></li>
 							</ul>
-						</li>
+						</li>/-->
 						<!-- /page kits -->
 
 					</ul>
@@ -1213,7 +1224,7 @@
 			<div class="page-header page-header-light">
 				<div class="page-header-content header-elements-md-inline">
 					<div class="page-title d-flex">
-						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Alpaca</span> - Basic Inputs</h4>
+						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Empresas</span> - Lista</h4>
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
 					</div>
 
@@ -1230,8 +1241,8 @@
 					<div class="d-flex">
 						<div class="breadcrumb">
 							<a href="index.html" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Home</a>
-							<a href="alpaca_basic.html" class="breadcrumb-item">Alpaca</a>
-							<span class="breadcrumb-item active">Basic inputs</span>
+							<a href="alpaca_basic.html" class="breadcrumb-item">Empresas</a>
+							<span class="breadcrumb-item active">Listar</span>
 						</div>
 
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
@@ -1268,7 +1279,96 @@
 			<!-- Content area -->
 			<div class="content">
 
+								<!-- Basic table -->
+				<div class="card">
+					<div class="card-header header-elements-inline">
+						<h5 class="card-title">Formulario</h5>
+						<div class="header-elements">
+							<div class="list-icons">
+		                		<a class="list-icons-item" data-action="collapse"></a>
+		                		<a class="list-icons-item" data-action="reload"></a>
+		                		<a class="list-icons-item" data-action="remove"></a>
+		                	</div>
+	                	</div>
+					</div>
+<!--
+					<div class="card-body">
+						Example of a <code>basic</code> table. For basic styling (light padding and only horizontal dividers) add the base class <code>.table</code> to any <code>&lt;table&gt;</code>. It may seem super redundant, but given the widespread use of tables for other plugins like calendars and date pickers, we've opted to isolate our custom table styles.
+					</div>
+/-->
+					<div class="table-responsive">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Num.</th>
+									<th>Nombre</th>
+									<th>Sector</th>
+									<th>Clave</th>
+                                    <th>Ciudad</th>
+                                    <th>Pais</th>
+                                    <th>Horario</th>
+                                    <th>Num. de Sucursales</th>
+                                    <th>Tipo</th>
+                                    <th>Regristrada</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Telmex</td>
+									<td>301</td>
+									<td>1930230</td>
+                                    <td>Ciudad de México</th>
+                                    <td>México</th>
+                                    <td>6:00 - 23:00</th>
+                                    <td>234</td>
+                                    <td>Telefonia</td>
+                                    <td>-Si-</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>Uber</td>
+									<td>456</td>
+									<td>1930243</td>
+                                    <td>San Luis Potosi</td>
+                                    <td>México</th>
+                                    <td>Todo el dia</td>
+                                    <td>100</td>
+                                    <td>Transporte</td>
+                                    <td>-Si-</td>
+								</tr>
+								<tr>
+									<td>3</td>
+									<td>Walmart</td>
+									<td>011</td>
+									<td>1932893</td>
+                                    <td>Houston</td>
+                                    <td>E.U.A.</td>
+                                    <td>7:00 - 22:00</td>
+                                    <td>4509</td>
+                                    <td>Comercial</td>
+                                    <td>-Si-</td>
+								</tr>
+								<tr>
+									<td>4</td>
+									<td>Banorte</td>
+									<td>123</td>
+									<td>1934234</td>
+                                    <td>Ciudad de México</td>
+                                    <td>México</td>
+                                    <td>9:00 - 17:00</td>
+                                    <td>340</td>
+                                    <td>Bancaria</td>
+                                    <td>-Si-</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<!-- /basic table -->
+
 				<!-- Text inputs title -->
+				<!--
 				<div class="mb-3">
 					<h6 class="mb-0 font-weight-semibold">
 						Text inputs
@@ -1279,6 +1379,7 @@
 
 
 				<!-- Basic examples -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1345,6 +1446,7 @@ $("#alpaca-static").alpaca({
 
 
 				<!-- Input labels -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1415,6 +1517,7 @@ $("#alpaca-static-label").alpaca({
 
 
 				<!-- Validation -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1495,6 +1598,7 @@ $("#alpaca-validation-predefined").alpaca({
 
 
 				<!-- Disallowance -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1571,6 +1675,7 @@ $("#alpaca-disallow-values").alpaca({
 
 
 				<!-- Third party integrations -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1665,6 +1770,7 @@ $("#alpaca-maxlength").alpaca({
 
 
 				<!-- Textarea title -->
+				<!--
 				<div class="mb-3 mt-2">
 					<h6 class="mb-0 font-weight-semibold">
 						Textarea type
@@ -1675,6 +1781,7 @@ $("#alpaca-maxlength").alpaca({
 
 
 				<!-- Basic textarea -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1750,6 +1857,7 @@ $("#alpaca-textarea-placeholder").alpaca({
 
 
 				<!-- View mode -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1826,6 +1934,7 @@ $("#alpaca-textarea-override").alpaca({
 
 
 				<!-- Selects title -->
+				<!--
 				<div class="mb-3 mt-2">
 					<h6 class="mb-0 font-weight-semibold">
 						Select menus
@@ -1836,6 +1945,7 @@ $("#alpaca-textarea-override").alpaca({
 
 
 				<!-- Basic selects -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -1909,6 +2019,7 @@ $("#alpaca-select-external").alpaca({
 
 
 				<!-- Multiselect -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
@@ -2001,6 +2112,7 @@ $("#alpaca-multiselect-remote").alpaca({
 
 
 				<!-- Select2 selects -->
+				<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
